//指定版本
syntax = "proto3";

//包名，通过protoc生成时go文件时
option go_package = "./;rand";
//请求结构
message RandRequest{
    int64 max = 1 ;
}


//回复结构
message RandResponse{
    int64 max = 1 ;
}


//接口
service Rand{
    rpc GetRand (RandRequest) returns(RandResponse){}
}